Resolved touch events not registering on safari. WTF bug indeed.

--- a/src/components/styles/components/_accordion.scss
+++ b/src/components/styles/components/_accordion.scss
@@ -1,6 +1,8 @@
 .Collapsible{
   width: 100%;
 }
+.Collapsible__contentOuter{
+}
 .Collapsible__contentInner {
   font-weight: 300;
   padding: 10px;
@@ -14,17 +16,15 @@
   font-weight: 500;
   opacity: .8;
   padding: 10px;
-  &:after{
-    border-radius: 50%;
+  &:before{
     content: url(../../img/caret-down-solid.svg);
     position: absolute;
     right: 10px;
     width: 17px;
     top: 7px;
-    display: block;
     transition: transform 300ms;
     opacity: 1;
-      transform-origin: 50% 40%;
+    transform-origin: 50% 40%;
   }
   &.is-open{
     &:after{
