--- a/src/components/styles/pages/_trade.scss
+++ b/src/components/styles/pages/_trade.scss
@@ -1,3 +1,5 @@
+.trade-accordion {
+}
 .trade-accordion ul li{
   border: 1px solid darkslategray;
   border-bottom: 0;
